CSS/style.css
/* ... */
.apropos, .nos-hebergements, .assistance {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 33.3335821%;
    padding: 20px;
}

/* PARTIE RESPONSIVE */

/* 1. Tablette */
 
@media (max-width: 1024px) {

    .InfoGroup {
        width: 100%;
        height: 322px;
    }

    .filterbar {
        height: 91px;
        width: 668px;
        flex-wrap: wrap;
    }

    .filtres{
        width: 100%;
        margin-bottom: 20px;
    }

    .economique {
        width: 25%;
    }
    
    .familial {
        width: 19.61077844311377%;
    }
    
    .romantique {
        width: 24.55089820359281%;
    }
    
    .nos-pepites {
        width: 24.10179640718563%;
    }

    .filter p {
        font-weight: 700;
        font-size: 16px;
        line-height: 18.78px;
    }

    .SectionGroup {
        height: 913px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

    }

    .offers-main {
        height: 611.5px;
        width: 100%;
    }

    .offers-sponsored {
        height: 252px;
        width: 100%;
    }

    .card-offers-sponsored {
        width: 100%;
        height: 146px;
        flex-direction: row;
        justify-content: space-between;
    }
   
    .card-main-2 {
        width: 31.79050925925926%;
        height: 100%;
    }

    .SectionActivites {
        height: 390.02px;
    }

    .box-activites {
        height: 270px;
    }

    .card-activite img {
        height: 200px;
    }

    .txt-card-activite {
        height: 70px;
    }
}

/* 2. Mobile */
 
@media (max-width: 768px) {

    main {
        padding: 0px;
        min-width: 320px;
    }

    /* Partie responsive header */

    header {
        height: 115px;
        flex-direction: column;
        margin-bottom: 30px;
    }

    .logo {
        width: 121.09px;
        padding: 30px;
        margin: auto;
    }

    .menu {
        width: 100%;
        height: 36px;
        margin: 0px;
        padding: 0px;
        justify-content: flex-start;
    }

    .hebergement, .activites {
        width: 50%;
        height: 100%;
    }

    .menu a {
        margin-top: 0px;
        margin-bottom: 16px;
    }

    .hebergement:hover, .activites:hover {
        border-top: none;
        border-bottom: 2px #0065FC solid;
        color: #0065FC;
    }

    /* Partie responsive groupe filtres */

    .InfoGroup {
        height: 432px;
        padding: 0px 20px 0px 20px;
    }

    .headline {
        height: 79px;
        margin-bottom: 8px;
    }

    .search-bar {
        width: 100%;
        max-width: 377px;
    }
    
    .texte-recherche {
        width: 87%;
        max-width: 327px;
    }

    .champ-saisie-recherche {
        border: none;
        width: 90%;
    }   
    
    .btn-recherche {
        display: none;
    }

    .btn-recherche-2 {
        display: block;
        cursor: pointer;
        width: 10%;
        min-width: 49px;
        height: 49px;
        border-radius: 15px;
        border: 1px #0065FC solid;
        box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
        background-color: #0065FC;
    }

    .btn-recherche-2 i {
        width: 17px;
        height: 17px;
        color: #FFFFFF;
    } 

    .filterbar {
        width: 100%;
        height: 161px;
        flex-wrap: wrap;
    }

    .filter {
        width: 48.5%;
        justify-content: center;
    }

    .economique, .romantique {
        min-width: 144px;
    }

    .filter i {
        margin-right: 5px;
    }

    .filter p {
        margin-left: 5px;
    }

    .infobar {
        width: 100%;
        height: 38px;
    }

    .cercle-icone-i {
        min-width: 24px;
    }

    /* Partie responsive cartes hebergements à marseille */

    .SectionGroup {
        height: 2019.5px;
        flex-direction: column-reverse;
        
    }

    .offers-sponsored {
        width: 100%;
        height: 569px;
        padding: 30px 20px 30px 20px;
    }

    .titre-offers-sponsored {
        margin-bottom: 15px;
    }

    .card-offers-sponsored {
        height: 100%;
        flex-direction: column;
        justify-content: space-between;
    }

    .etoiles-2 {
        width: 68px;
        height: 12px;
    }

    .card-main-2 {
        width: 100%;
        height: 146px;
    }

    .offers-main {
        width: 100%;
        height: 1435.5px;
        padding: 20px;
        background-color: #FFFFFF;
    }

    .box-offers-main {
        height: 651.75px;
        flex-direction: column;
    }

    .card-main {
        width: 100%;
        max-width: 400px;
        margin: 0px auto
    }

    .etoiles {
        width: 81px;
    }

    /* Partie responsive Section des activites */

    .SectionActivites {
        height: 965.02px;
    }

    .box-activites {
        height: 845px;
        flex-direction: column;
    }

    .card-activite {
        width: 100%;
        max-width: 400px;
        height: 200px;
        margin: 0px auto;
    }

    .card-activite img {
        height: 141px;
    }

    /* Partie responsive footer */

    footer {
        height: 461px;
        flex-direction: column;
        justify-content: space-between;
        padding: 30px;
    }

    .nos-hebergements, .assistance {
     width: 84%;
     height: 89px
    }

    .apropos {
        width: 84%;
        height: 123px;
    }
}

